пока работает, щас исправлю

--- a/home/templates/home/computer_detail.html
+++ b/home/templates/home/computer_detail.html
@@ -212,7 +212,8 @@
         <div class="col-sm-4">
             <div class="form-group">
                 <label>Comment</label>
-                <textarea class="form-control" rows="3" placeholder="Add a comment" name="comment" disabled>{{ computer.addComment }}</textarea> 
+                
+                <textarea class="form-control" rows="3" placeholder="Add a comment" disabled>{{ computer.addComment }}</textarea>
             </div>
         </div>
     </div>
@@ -389,7 +390,8 @@
               <div class="col-sm-4">
                 <div class="form-group">
                   <label>Additional software</label>
-                  <textarea class="form-control" rows="3" placeholder="Add a comment" value="{{ computer.addSoftware }}" disabled></textarea>
+                  
+                  <textarea class="form-control" rows="3" placeholder="Add a software" disabled>{{ computer.addSoftware }}</textarea>
                 </div>
               </div>                
             </div>
@@ -442,7 +444,7 @@
               <div class="col-sm-4">
                 <div class="form-group">
                   <label>Additional devices</label>
-                  <textarea class="form-control" rows="3" placeholder="Add a devices" value="{{ computer.addDevices }}" disabled></textarea>
+                  <textarea class="form-control" rows="3" placeholder="Add a devices" disabled>{{ computer.addDevices }}</textarea>
                 </div>
               </div>                
             </div>
